--- a/index.html
+++ b/index.html
@@ -93,8 +93,13 @@
         </section>
     </aside>
 
-    <footer>
-        <p>&copy; 2024 The Gossip Room. All rights reserved.</p>
+   <footer>
+        <p>
+            <a href="LICENSE">©</a> <span id="currentYear"></span> 
+            <a href="https://tfp.la">TFP</a> | 
+            <a href="https://thelaboratory.cc">The Laboratory</a> | 
+            <a href="https://thelaboratory.cc/thankyou.html">Thank You</a>
+        </p>
     </footer>
 
     <script src="script.js"></script>
