so much new content

--- a/tech/automotive/index.html
+++ b/tech/automotive/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Latest AI news and developments - TheGossRoom Tech">
-    <title>AI News & Updates | TheGossRoom Tech</title>
+    <meta name="description" content="Latest Automotive Technology News - TheGossRoom Tech">
+    <title>Automotive Tech News & Updates | TheGossRoom Tech</title>
 
-    <!-- Styles -->
     <link rel="stylesheet" href="/shared/global.css">
     <link rel="stylesheet" href="/shared/styles/nav-tree.css">
     <link rel="stylesheet" href="styles/style.css">
@@ -16,7 +15,7 @@
         <nav class="main-nav">
             <a href="/" class="logo">TheGossRoom</a>
             <a href="/tech">Tech</a>
-            <span class="current">AI</span>
+            <span class="current">Automotive</span>
             <a href="/attribution.html">Attribution</a>
         </nav>
     </header>
@@ -26,12 +25,12 @@
         <div id="section-nav"></div>
 
         <section class="trending-topics">
-            <h2>Trending in AI</h2>
+            <h2>Trending in Automotive Tech</h2>
             <div id="topics-container"></div>
         </section>
 
         <section class="latest-news">
-            <h2>Latest AI News</h2>
+            <h2>Latest Automotive News</h2>
             <div id="articles-grid"></div>
         </section>
     </main>
@@ -45,7 +44,6 @@
         </p>
     </footer>
 
-    <!-- Scripts -->
     <script src="/shared/global.js"></script>
     <script src="/shared/components/nav-tree.js"></script>
     <script src="script.js"></script>
