--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </section>
 
         <section id="popularity">
-            <h2>Who's Popular This Week?</h2>
+            <h2>Drama Index</h2>
             <div id="popularity-chart">
                 <!-- Popularity chart will be dynamically inserted here -->
             </div>
@@ -79,15 +79,15 @@
         <section id="celebrity-categories">
             <h2>Celebrity Categories</h2>
             <div id="hot-this-week">
-                <h3>Hot This Week</h3>
+                <h3>Hot</h3>
                 <ul></ul>
             </div>
             <div id="not-this-week">
-                <h3>Not This Week</h3>
+                <h3>Not</h3>
                 <ul></ul>
             </div>
             <div id="upcoming-new-names">
-                <h3>Upcoming New Names</h3>
+                <h3>Upcoming</h3>
                 <ul></ul>
             </div>
         </section>
